Bug 133944 - FORMATTING Shadow of an image not shown correctly
Summary: FORMATTING Shadow of an image not shown correctly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.beta1+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Image-Dialog
  Show dependency treegraph
 
Reported: 2020-06-12 21:20 UTC by Stefan_Lange_KA@T-Online.de
Modified: 2020-07-07 06:05 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot to show the problem (231.00 KB, image/jpeg)
2020-06-12 21:20 UTC, Stefan_Lange_KA@T-Online.de
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan_Lange_KA@T-Online.de 2020-06-12 21:20:48 UTC
Created attachment 161933 [details]
Screenshot to show the problem

When to an inserted image is assigned a shadow "right + bottom" it is shown not correctly: The shadow on the right is missing.
The shadow is shown correctly when it is located top + right, top + left or bottom + left.

Reproduce the problem:
- File -> Writer text document
- Insert -> Image -> choose any image file from computer to insert it into the text document
- right click on the inserted image -> Properties -> Tab "Border"
- select "shadow to the right and to the bottom" -> OK

Expected result: The shadow is shown on the right and on the bottom.
Current result: The shadow is shown only on the bottom.

The problem was reproduced with 
Version: 7.0.0.0.beta1+ (x64)
Build ID: 34a6ca0af17deae2a3df141e214f2366955b9d68
CPU-Threads: 4; BS: Windows 10.0 Build 19645; UI-Render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL
and with
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 7f6d7a0eb624d67421cd5af6462ee2a662fdff3a
CPU-Threads: 4; BS: Windows 10.0 Build 19645; UI-Render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

Remarks:
- The behavior doesn't depend on how output is rendered (Skia active or not).
- When the document is saved with LO 7.x and opened with LO 6.4 also the shadow "Right + Bottom" is shown correctly. I have tested with LO 6.4.5.1.
Comment 1 Dieter 2020-06-16 13:58:22 UTC
I confirm it with

Version: 7.0.0.0.beta1 (x64)
Build ID: 94f789cbb33335b4a511c319542c7bdc31ff3b3c
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 2 Stefan_Lange_KA@T-Online.de 2020-06-21 15:56:22 UTC
I have checked when the bug was introduced:
- In the build from 2020-04-18 (and all earlier builds since 01/2020) the shadow is displayed correctly (bottom + right).
Version: 7.0.0.0.alpha0+ (x64)
Build-ID: 5063669a17538ea353e34ab0990363399d34f4f4
CPU-Threads: 4; BS: Windows 10.0 Build 20150; UI-Render: Skia/Vulkan; VCL: win;
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DECalc: threaded
- In the build from 2020-04-19 the bug occurs for the first time, i.e. the shadow on the right is missing.
Version: 7.0.0.0.alpha0+ (x64)
Build-ID: bc003c7d41c31509882646900c0b2cc8678f0215
CPU-Threads: 4; BS: Windows 10.0 Build 20150; UI-Render: Skia/Vulkan; VCL: win;
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DECalc: threaded
- In all later builds until today (= 2020-06-21) occurs too.
Comment 3 Attila Baraksó (NISZ) 2020-06-25 14:14:09 UTC
Bibisected using bibisect-win64-7.0 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=1f59cbe36c9899f6fa9a869331c9be454abd4606
author: Noel Grandin <noel.grandin@collabora.co.uk>	
committer: Noel Grandin <noel.grandin@collabora.co.uk>
summary: simplify some SwRect code - use the SwRect Add* variants

Adding CC: Noel Grandin
Comment 4 Commit Notification 2020-07-03 07:02:00 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/006572e4d808e95a6624d0c5f37be8b8d14449ce

tdf#133944 writer image shadow incorrect

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2020-07-03 17:00:03 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: e2b50a956cd34179d4f1e7f87834a94188011843
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Noel, thanks for fixing this issue!!
Comment 6 Stefan_Lange_KA@T-Online.de 2020-07-04 06:47:11 UTC
I have also tested on a Windows system.
Test was OK with
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 92c2318db92c3f102243ef1f8a9a492796932ff6
CPU-Threads: 4; BS: Windows 10.0 Build 20161; UI-Render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Many thanks from me too for fixing the bug!
It would be nice if the fix could be pushed also to the coming RCs of version 7.0.
Comment 7 Commit Notification 2020-07-06 11:28:42 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/5e95aa716d58f80aaec259008b95d8b4d501fc6d

tdf#133944 writer image shadow incorrect

It will be available in 7.0.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Stefan_Lange_KA@T-Online.de 2020-07-07 06:05:14 UTC
Test was OK with
Version: 7.0.0.1.0+ (x64)
Build ID: e4f697e510e0450375895d15256f27ee666e2968
CPU-Threads: 4; BS: Windows 10.0 Build 20161; UI-Render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL

Many thanks!