tdf#133944 writer image shadow incorrect

regression from
    commit 1f59cbe36c9899f6fa9a869331c9be454abd4606
    Date:   Fri Apr 17 15:38:05 2020 +0200
    simplify some SwRect code - use the SwRect Add* variants

Change-Id: I435b1153f272b08a2bfe7d90145de1ee5a702b08
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97720
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>